# human-eval-harness-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  apprunner-ecr-trust-policy.json  apprunner.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
aws/iam/: apprunner-s3-policy.json
tasks/: circuit.yaml  clone3d.yaml  flightradar.yaml  graph.yaml  voidcut.yaml
